--- a/pages/More/Wiki.css
+++ b/pages/More/Wiki.css
@@ -48,6 +48,7 @@ body {
     z-index: 1000;
     box-sizing: border-box;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    margin-bottom:12px;
 }
 
 .nav-top-line {
@@ -135,17 +136,6 @@ body {
     font-size: 0.9em;
     width: 150px;
     transition: width 0.3s, border-color 0.3s;
-}
-
-.hero-banner {
-    background: linear-gradient(135deg, rgba(255, 255, 255, 0.9) 0%, rgba(138, 43, 226, 0.5) 70%), url('https://via.placeholder.com/1500x500/8a2be2/ffffff?text=STREAM+VIOLET+Destaque');
-    background-size: cover;
-    background-position: center;
-    height: 40vh;
-    display: flex;
-    align-items: flex-end;
-    padding: 0 15px 40px 15px;
-    margin-top: 100px; 
 }
 
 /* -------------------------------------------------------------------
