--- a/pages/More/Wiki.css
+++ b/pages/More/Wiki.css
@@ -48,7 +48,6 @@ body {
     z-index: 1000;
     box-sizing: border-box;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    margin-bottom:12px;
 }
 
 .nav-top-line {
@@ -156,6 +155,7 @@ body {
     padding: 0 15px 20px 15px; 
     gap: 10px;
     scroll-behavior: smooth;
+    margin-top:21px;
 }
 
 .card {
