Adjust card position in Wiki.css

--- a/pages/More/Wiki.css
+++ b/pages/More/Wiki.css
@@ -155,7 +155,8 @@ body {
     padding: 0 15px 20px 15px; 
     gap: 10px;
     scroll-behavior: smooth;
-    top:45px;
+    position:relative;
+    top:39px;
 }
 
 .card {
