Change background color of netflix-nav to transparent

--- a/pages/More/Wiki.css
+++ b/pages/More/Wiki.css
@@ -40,7 +40,7 @@ body {
 .netflix-nav {
     display: block; 
     padding: 10px 15px;
-    background: var(--secondary-color);
+    background: transparent;
     position: fixed;
     top: 0;
     left: 0;
