--- a/pages/More/Wiki.css
+++ b/pages/More/Wiki.css
@@ -40,7 +40,7 @@ body {
 .netflix-nav {
     display: block; 
     padding: 10px 15px;
-    background: transparent;
+    background:var(--secondary-color);
     position: fixed;
     top: 0;
     left: 0;
