--- a/pages/More/Wiki.css
+++ b/pages/More/Wiki.css
@@ -137,6 +137,17 @@ body {
     transition: width 0.3s, border-color 0.3s;
 }
 
+.hero-banner {
+    background: transparent;
+    background-size: cover;
+    background-position: center;
+    height: 0.3px;
+    display: flex;
+    align-items: flex-end;
+    padding: 0 15px 40px 15px;
+    margin-top: 100px; 
+}
+
 /* -------------------------------------------------------------------
  * Layout de Linhas e Cards
  * ------------------------------------------------------------------- */
