--- a/pages/More/Wiki.css
+++ b/pages/More/Wiki.css
@@ -211,7 +211,7 @@ body {
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: auto; 
+    overflow: hidden; 
     background-color: rgba(0, 0, 0, 0.4); 
     backdrop-filter: blur(5px);
 }
@@ -220,8 +220,8 @@ body {
     background-color: var(--card-light);
     margin: 0; 
     padding: 15px;
-    width: 100%;
-    height: 100%; 
+    min-width: 100%;
+    min-height: 100%; 
     box-sizing: border-box;
     overflow-y: auto; 
     border-radius: 0; 
